# stdexecutils-qt

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py
.githooks/: pre-commit
cmake/: Config.cmake.in  compiler_warnings.cmake
cmake/modules/: CodeCoverage.cmake
docs/: Doxyfile.in  doxygen-awesome.css
include/stdexecutils/qt/: qml_receiver.hpp  qthread_scheduler.hpp  qthreadpool_scheduler.hpp
src/: qml_receiver.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  stdexecutils_qml_tests.cpp  stdexecutils_qt_tests.cpp  stdexecutils_tests.cpp
